.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b1 - Unreleased
------------------

- Updated markup of document_view and event_view to follow conventions 
  in main_template. 
  References https://dev.plone.org/plone/ticket/9981
  [spliter]

- Just a markup polishing - <metal> tags don't need explicit "metal" for 
  defining slots.
  [spliter]

- plone.belowcontent should not replace div#viewlet-below-content but 
  rather add content into it
  [spliter]

- Moves plone.abovecontent and plone.belowcontent viewlet managers actually 
  above and below content respectively.
  Closes http://dev.plone.org/plone/ticket/10081
  [spliter]

- Put the preferred markup for content area in main_template. References #9981
  [spliter]

- Remove prefs_group_modify.cpy as we no longer use it. Adjust tests accordingly.
  [esteele]

- Rework the prefs_group_details form to properly redirect back to the new
  @@usergroup-groupprefs page when creating a new groups, and postback to
  itself when modifying existing groups.
  [esteele]
  
- Add popup for add group form.
  [smcmahon]

- Pass group title and description through to the editGroups request, to
  ensure the those properties on the groups are updated. Allows the display of
  titles in @@usergroup-groupprefs
  Closes http://dev.plone.org/plone/ticket/7277
  Closes http://dev.plone.org/plone/ticket/9828
  [esteele, erikrose]

- User-add dialog will no longer hide errors (e.g., inability to mail).
  fixes http://dev.plone.org/plone/ticket/9964
  [smcmahon]

- Changed noform action for user add ajax overlay form to "reload" to
  fix http://dev.plone.org/plone/ticket/9957
  [smcmahon]

- Changed login form overlay handling to deal with the need for a redirect
  if logging in from pwreset_finish.
  Closes http://dev.plone.org/plone/ticket/5548
  [smcmahon]
