@@ -1,5 +1,15 @@
 from zope.interface import Interface
 
+import zope.deferredimport
+
+# This is used as a persistent marker interface, we need to provide an upgrade
+# step to update the class reference before removing it.
+zope.deferredimport.deprecated(
+    "It has been moved to plone.app.layout.navigation.interfaces. " 
+    "This alias will be removed in Plone 5.0",
+    INavigationRoot = 'plone.app.layout.navigation.interfaces:INavigationRoot',
+    )
+
 
 class INavigationBreadcrumbs(Interface):
 
